[gd_scene load_steps=2 format=3 uid="uid://cgfwnd4doemmm"]

[ext_resource type="Script" path="res://Resources/Scripts/UI/Gameplay/PowerUp.gd" id="1_s7g8e"]

[node name="PowerUps" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7g8e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Arms" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Arms Day"

[node name="Legs" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Legs Day"

[node name="Chest" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Chest/Back Day"

[connection signal="pressed" from="MarginContainer/BoxContainer/Arms" to="." method="_on_arms_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/Legs" to="." method="_on_legs_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/Chest" to="." method="_on_chest_pressed"]
